# sdlx

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  sdlx.c  sdlx.h
emcc/: CMakeLists.txt  main.c
test/: CMakeLists.txt  test_distance.c  test_float_equals.c
